--- a/express/public/index.html
+++ b/express/public/index.html
@@ -3,7 +3,7 @@
     <title>Image Cropper</title>
     <!-- Required CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css">
-    <link rel="stylesheet" href="../cropperJS/box.css">
+    <link rel="stylesheet" href="/css/box.css">
 </head>
 <body>
     <div class="controls">
@@ -30,6 +30,7 @@
     <!-- Required JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
-    <script src="../cropperJS/imgCrop.js"></script>
+    <script src="/js/imgCrop.js"></script>
 </body>
-</！html>
+
+</html>
