New:call python

--- a/express/public/index.html
+++ b/express/public/index.html
@@ -8,8 +8,10 @@
 <body>
     <div class="controls">
         <input type="file" id="upload" accept="image/*">
-        <button id="sureCut">Crop & Compress</button>
-        <button id="saveAllBtn">Save All</button>
+        <button id="sureCut">確認裁切</button>
+        <button id="saveAllBtn">儲存</button>
+        <button id="loginBtn" onclick="">登入</button>
+
 
     </div>
 
