--- a/express/public/index.html
+++ b/express/public/index.html
@@ -10,7 +10,7 @@
         <input type="file" id="upload" accept="image/*">
         <button id="sureCut">確認裁切</button>
         <button id="saveAllBtn">儲存</button>
-        <button id="loginBtn" onclick="">登入</button>
+        <button id="loginBtn" onclick="window.location.href = 'login.html';">登入</button>
 
 
     </div>
